--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 -----------------------------------------
     1.0 Common CSS
     2.0 Header Area
-    3.0 
+    3.0 App Feature Area
         
 /*---------------------------------------
     1.0 Common CSS
@@ -84,17 +84,29 @@ button {
 
 .stoke {
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: #29da77;
-    opacity: 0.5;
+    opacity: 0.9;
 }
 
 .green {
     color: #29da77;
 }
 
+.comoon-bg {
+    background-color: #f3f7ff;
+}
+
 .item-bounce {
     animation: bounce 3s infinite ease-in-out;
+}
+
+.pt-130 {
+    padding-top: 130px;
+}
+
+.pb-100 {
+    padding-bottom: 100px;
 }
 
 /*---------------------------------------
@@ -107,6 +119,7 @@ button {
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
+    background-position: center bottom;
 }
 
 .header-area .header-top {
@@ -153,7 +166,7 @@ button {
 .header-area .header-bottom p {
     font-size: 16px;
     color: #2b2e35;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .header-area .header-bottom img {
@@ -260,4 +273,52 @@ button {
 .mobile-menu .menu-box .close-link img {
     width: 50px;
     cursor: pointer;
+}
+
+/*---------------------------------------
+    3.0 App Feature Area
+-----------------------------------------*/
+.app-features .app-feature-content h2 {
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 45px;
+}
+
+.app-features .app-feature-content p {
+    font-size: 14px;
+    color: #29da77;
+    font-weight: bold;
+}
+
+.app-features .single-feature {
+    text-align: center;
+    background-color: #fff;
+    padding: 100px 40px 100px 70px;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.app-features .single-feature h2 {
+    font-size: 72px;
+    font-weight: bold;
+    position: absolute;
+    right: -12px;
+    bottom: -26px;
+    opacity: .3;
+}
+
+.app-features .single-feature h3 {
+    font-size: 24px;
+    color: #000;
+    font-weight: bold;
+    margin-bottom: 25px;
+
+}
+
+.app-features .single-feature p {
+    font-size: 16px;
+    color: #585858;
+    font-weight: normal;
 }
