--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -146,6 +146,11 @@
         display: none;
     }
 
+    /* Pricing Area */
+    .pricing-area {
+        padding: 50px 15px;
+    }
+
     /* CTA Area */
     .cta-area h2{
         text-align: center;
