--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,20 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+h1{
+    font-size: 60px;
+    margin-bottom: 40px;
+    color: #2e374f;
+    font-weight: bold;
+    line-height: 70px;
+}
+
+p{
+    font-size: 16px;
+    color: #2b2e35;
+    margin-bottom: 40px;
+    line-height: 26px;
+}
 a {
     text-decoration: none;
 }
@@ -144,7 +158,7 @@ button {
 }
 
 .header-area .header-top {
-    margin-bottom: 50px;
+    margin-bottom: 80px;
 }
 
 .header-area .header-top .logo img {
@@ -177,29 +191,19 @@ button {
     margin-left: 85px;
 }
 
-.header-area .header-bottom h1 {
-    font-size: 60px;
-    font-weight: bold;
-    color: #2e374f;
-    margin-bottom: 40px;
-}
-
-.header-area .header-bottom p {
-    font-size: 16px;
-    color: #2b2e35;
-    margin-bottom: 20px;
-}
-
 .header-area .header-bottom img {
     width: 100%;
 }
-
+.header-area .header-bottom p{
+    margin-bottom: 60px;
+}
 .header-area .header-bottom form {
     position: relative;
+    max-width: 500px;
 }
 
 .header-area .header-bottom form input[type=email] {
-    padding: 25px;
+    padding: 20px 5px 20px 30px;
     color: #91949a;
     font-size: 14px;
     border: 1px solid #e5e5e7;
@@ -211,6 +215,7 @@ button {
     position: absolute;
     right: 3%;
     top: 12%;
+    padding: 10px 30px;
 }
 
 /* Mobile Menu */
@@ -306,7 +311,6 @@ button {
 }
 
 .app-features .app-feature-content p {
-    font-size: 14px;
     color: #29da77;
     font-weight: bold;
 }
@@ -336,12 +340,6 @@ button {
     font-weight: bold;
     margin-bottom: 25px;
 
-}
-
-.app-features .single-feature p {
-    font-size: 16px;
-    color: #585858;
-    font-weight: normal;
 }
 
 /*---------------------------------------
@@ -384,10 +382,6 @@ button {
     margin-bottom: 15px;
 }
 
-.dashboard-feature .feature-list p {
-    font-size: 14px;
-    color: #2b2e35;
-}
 
 /* Dashobard Features Part Two */
 .dashboard-features-two .feature-list {
@@ -440,13 +434,6 @@ button {
     color: #2b2e35;
     margin-bottom: 15px;
 }
-
-.customer-service .feature-list p {
-    font-size: 14px;
-    color: #2b2e35;
-    margin-top: 3px;
-}
-
 
 /*---------------------------------------
     6.0 Pricing Area
